Fix layout issue with d-flex

--- a/src/css/_normalize.scss
+++ b/src/css/_normalize.scss
@@ -23,7 +23,7 @@
   }
 }
 
-main {
+.main-container {
   padding: $size-sm;
   overflow: auto;
 }
@@ -35,11 +35,8 @@ main {
   margin: 0 (-$size-sm);
 }
 
-.card {
-  border-radius: 0;
-  .card-block {
-    padding: $size-sm;
-  }
+.panel {
+  padding: $size-sm;
 }
 
 .mask {
