--- a/src/css/_theme.scss
+++ b/src/css/_theme.scss
@@ -38,7 +38,8 @@ $border: 1px solid $border-color;
   }
 }
 
-.card {
+.panel {
+  background-color: $white;
   border: $border;
 }
 
